rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__open_with_picker_three_middle_120x40.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 40 },
    content: [
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                           ┌Open With...────────────────────┐                                           ",
        "                                           │   View with less               │                                           ",
        "                                           │   Edit with Notepad            │                                           ",
        "                                           │   vim $F                       │                                           ",
        "                                           │ [Enter] Open  [Esc] Cancel     │                                           ",
        "                                           └────────────────────────────────┘                                           ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 44, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 56, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 77, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 44, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 46, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 74, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 76, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 77, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 44, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 46, y: 19, fg: Black, bg: White, underline: Reset, modifier: BOLD,
        x: 74, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 76, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 77, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 44, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 46, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 74, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 76, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 77, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 44, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 45, y: 21, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 75, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 76, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 77, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 77, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
